fixing overflow

--- a/src/app/components/card/card.component.css
+++ b/src/app/components/card/card.component.css
@@ -1,3 +1,13 @@
+mat-card {
+  max-width: 240px;
+  max-height: 540px;
+  overflow: hidden;
+}
+
+p {
+  max-width: 184px;
+  overflow: hidden;
+}
 
 img {
   width: 240px;
